[gd_scene load_steps=7 format=4 uid="uid://bi7nkpjge0yeh"]

[ext_resource type="Texture2D" uid="uid://b0r002pxrs0tp" path="res://Basic.png" id="1_2m2lv"]
[ext_resource type="Script" path="res://test_branch.gd" id="1_c8w4f"]
[ext_resource type="Texture2D" uid="uid://dnq5ygsu2l26e" path="res://icon.svg" id="3_sm2x8"]
[ext_resource type="Script" path="res://charactertest.gd" id="4_hr0hx"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pxw0g"]
texture = ExtResource("1_2m2lv")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
2:0/0 = 0
2:2/0 = 0
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_vrk58"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_pxw0g")

[node name="TestBranch" type="Node2D"]
script = ExtResource("1_c8w4f")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAEAAAAAAAAAAAACAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAIAAAACAAAAAAACAAEAAAACAAAAAAABAAAAAAACAAAAAAAAAAEAAAACAAAAAAABAAIAAAACAAAAAAACAAMAAAACAAAAAAADAAAAAAACAAAAAAAAAAMAAAACAAAAAAABAAMAAAAAAAAAAAAAAAIAAAAAAAAAAAACAAAAAAAAAAAAAAADAAEAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_vrk58")

[node name="User" type="Sprite2D" parent="."]
position = Vector2(17, 17)
scale = Vector2(0.173828, 0.177734)
texture = ExtResource("3_sm2x8")
script = ExtResource("4_hr0hx")

[node name="Target" type="Sprite2D" parent="."]
position = Vector2(112, 109)
scale = Vector2(0.15, 0.125)
texture = ExtResource("1_2m2lv")
script = ExtResource("4_hr0hx")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="zeroBTN" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.914
anchor_top = 2.594
anchor_right = 1.479
anchor_bottom = 3.05
offset_left = 3.44
offset_top = -0.760002
offset_right = 11.44
offset_bottom = 7.23998

[node name="oneBTN" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.175
anchor_top = 2.975
anchor_right = 0.375
anchor_bottom = 3.175

[node name="twoBTN" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.732
anchor_top = 2.52
anchor_right = 2.386
anchor_bottom = 3.158
offset_left = 2.71999
offset_top = 3.19999
offset_right = -4.44
offset_bottom = -5.32001
